# LocalDashboard

./: FOCUS_LOGS_UPDATE.md  README-TASKS.md  README.md  docker-compose.yml  fix_focus_logs_naming.bat  focus_monitor_agent.py  repomix-output.txt  restart_app.bat  start_dev.bat  workspace_snap_agent.py
ProjectsHub/: 00-meta.yaml  alarm_persistence.json  countdowns.yaml  workspace_layout.json  workspace_state.json
ProjectsHub/5236tg/: project.yaml
ProjectsHub/Project-A/: project.yaml  tasks.yaml
ProjectsHub/Project-B/: project.yaml  tasks.yaml
ProjectsHub/asd/: project.yaml
ProjectsHub/asd-2/: project.yaml
ProjectsHub/chat_sessions/: 10e98024-131e-4436-af8b-79789c9e5069.json  1745164108066.json  68559ad1-edac-4a1a-acb7-b82d442f7147.json  74d7a4da-bee7-4205-90aa-556ef623b012.json  c56a0720-4cce-45e2-8edd-090852f54686.json  dashboard-assistant.json
ProjectsHub/focus_logs/: README.md  daily_summary_2025-04-19.json  focus_log_2025-004-20.jsonl  focus_log_2025-04-19.jsonl  focus_log_2025-04-20.jsonl  focus_log_focus_log_2025-04-20.jsonl  screenshot_2025-04-19_20250419_225751_966107.txt  screenshot_2025-04-19_20250419_225855_827867.txt  screenshot_2025-04-19_20250419_225959_910216.txt  screenshot_2025-04-19_20250419_230100_022044.txt  screenshot_2025-04-19_20250419_230200_109026.txt  (+7 more)
ProjectsHub/op/: project.yaml
backups/: apply_fixes.bat  create_sample_log.bat  fix_focus_logs.bat
tauri/: build.sh  install-md-editor.bat  package-lock.json  package.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
(+100 files in other folders)
